# winrestyle

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/wr-core/: Cargo.toml
crates/wr-core/src/: autostart.rs  components.rs  config.rs  guardian.rs  lib.rs  manager.rs  process.rs  shell.rs
crates/wr-installer/: Cargo.toml
crates/wr-installer/src/: app.rs  cli.rs  main.rs  render.rs  view.rs
crates/wr-ipc/: Cargo.toml
crates/wr-ipc/src/: lib.rs
crates/wr-shell/: Cargo.toml
crates/wr-shell/src/: autostart.rs  main.rs  surfaces.rs  wallpaper.rs
crates/wr-taskbar/: Cargo.toml
crates/wr-taskbar/src/: actions.rs  apps.rs  bar.rs  iconload.rs  layout.rs  lib.rs  main.rs  render.rs  startmenu.rs  tasks.rs  tray.rs  winlist.rs
crates/wr-watchdog/: Cargo.toml
crates/wr-watchdog/src/: main.rs
docs/: ARCHITECTURE.md  ROADMAP.md  TESTING.md
docs/decisions/: 0001-watchdog-liveness.md  0002-mutual-supervision.md  0003-shell-heartbeat.md  0004-logon-autostart.md  0005-taskbar-child-surface.md  0006-installer-manager.md  0007-start-menu.md  0008-live-activate.md
scripts/: vm-test.ps1
