[package]
name = "wr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
