[package]
name = "wr-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wr-installer"
path = "src/main.rs"

[dependencies]
wr-core = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    # Matrix3x2 (content scroll transform) and D2D brush-property numerics.
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    # CreateHwndRenderTarget / D2D1_RENDER_TARGET_PROPERTIES are gated on this.
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
