[package]
name = "wr-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
]
