[package]
name = "wr-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wr-shell"
path = "src/main.rs"

[dependencies]
wr-core = { workspace = true }
wr-ipc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
