[package]
name = "wr-taskbar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wr-taskbar"
path = "src/main.rs"

[dependencies]
wr-core = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    # D2D brush methods (CreateSolidColorBrush) are gated on Foundation_Numerics
    # because D2D1_BRUSH_PROPERTIES embeds a Numerics matrix.
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]
