[package]
name = "wr-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "wr-watchdog"
path = "src/main.rs"

[dependencies]
wr-core = { workspace = true }
wr-ipc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
]
